# loopfit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
examples/: fit_data.ipynb  fit_example.ipynb  fit_sonnet.ipynb  sonnet_resonator_data.ts
src/loopfit/: CMakeLists.txt  __init__.py  _utils.pxd  _utils.pyx  _wrap.pyx  ceres_fit.cpp  ceres_fit.hpp  ceres_fit.pxd  eqn_cubic.cpp  eqn_cubic.hpp  io.py
tests/: conftest.py  fit_data.py  test_fit.py  test_model.py
